compiler/test/fail/math_string_args.js
// Cannot do math operation with non-numerical literals.
Math.atan2("1", "2");
